[gd_scene load_steps=18 format=2]

[ext_resource path="res://Paddle.tscn" type="PackedScene" id=1]
[ext_resource path="res://Paddle.gd" type="Script" id=2]
[ext_resource path="res://Paddle2.gd" type="Script" id=3]
[ext_resource path="res://art/Wall.png" type="Texture" id=4]
[ext_resource path="res://Ball.tscn" type="PackedScene" id=5]
[ext_resource path="res://fonts/PungFont.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://Main.gd" type="Script" id=7]
[ext_resource path="res://KickoffUI.gd" type="Script" id=8]
[ext_resource path="res://sounds/score.wav" type="AudioStream" id=9]
[ext_resource path="res://sounds/beep.wav" type="AudioStream" id=10]
[ext_resource path="res://art/background.png" type="Texture" id=11]
[ext_resource path="res://sounds/music.mp3" type="AudioStream" id=12]
[ext_resource path="res://Message.tscn" type="PackedScene" id=13]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 246.691, 4.58996 )

[sub_resource type="DynamicFont" id=2]
size = 76
outline_size = 5
extra_spacing_char = 70
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=3]
size = 112
outline_size = 2
outline_color = Color( 0, 0.905882, 1, 1 )
font_data = ExtResource( 6 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 18.5, 532.75 )

[node name="Main" type="Node2D"]
script = ExtResource( 7 )

[node name="Enviornment" type="ColorRect" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0
color = Color( 0.145098, 0.101961, 0.227451, 1 )

[node name="Background" type="Sprite" parent="Enviornment"]
visible = false
position = Vector2( 970.5, 546.5 )
scale = Vector2( 2.01979, 1.52361 )
texture = ExtResource( 11 )

[node name="Net" type="ColorRect" parent="Enviornment"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -19.9999
margin_right = -1.99994
margin_bottom = 37.0
rect_scale = Vector2( 1, 29.12 )
color = Color( 1, 1, 1, 0.0862745 )

[node name="TopWall" type="StaticBody2D" parent="Enviornment"]
position = Vector2( -8, -1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Enviornment/TopWall"]
position = Vector2( 968.5, 2.71483 )
scale = Vector2( 3.88948, 2.2408 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="Enviornment/TopWall"]
position = Vector2( 968, 4 )
scale = Vector2( 1, 0.52 )
texture = ExtResource( 4 )

[node name="BottomWall" type="StaticBody2D" parent="Enviornment"]
position = Vector2( 1918, 1077 )
rotation = -3.14159
scale = Vector2( 1, 0.64002 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Enviornment/BottomWall"]
position = Vector2( 958.5, 2.71483 )
scale = Vector2( 3.88948, 2.2408 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="Enviornment/BottomWall"]
position = Vector2( 958, 4 )
scale = Vector2( 1, 0.52 )
texture = ExtResource( 4 )

[node name="Pung" type="Label" parent="Enviornment"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -85.0
custom_colors/font_color = Color( 1, 1, 1, 0.435294 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "PUNG"
align = 1

[node name="Player1Score" type="Label" parent="Enviornment"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -112.0
margin_top = 23.0
margin_right = -25.0
margin_bottom = 136.0
custom_fonts/font = SubResource( 3 )
text = "0"
align = 1
valign = 1

[node name="Player2Score" type="Label" parent="Enviornment"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -1.0
margin_top = 22.0
margin_right = 86.0
margin_bottom = 135.0
custom_fonts/font = SubResource( 3 )
text = "0"
align = 1
valign = 1

[node name="Player1Net" type="Area2D" parent="Enviornment"]
position = Vector2( -10, 0 )
scale = Vector2( 0.56, 1 )
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Enviornment/Player1Net"]
position = Vector2( -0.499998, 535.25 )
shape = SubResource( 4 )

[node name="Player2Net" type="Area2D" parent="Enviornment"]
position = Vector2( 1927, 5 )
scale = Vector2( 0.36, 1 )
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Enviornment/Player2Net"]
position = Vector2( -0.5, 529 )
shape = SubResource( 4 )

[node name="score" type="AudioStreamPlayer2D" parent="Enviornment"]
position = Vector2( 952, 422 )
stream = ExtResource( 9 )

[node name="Paddle" parent="." instance=ExtResource( 1 )]
position = Vector2( 147, 500 )
scale = Vector2( 0.7, 1 )
script = ExtResource( 2 )

[node name="Paddle2" parent="." instance=ExtResource( 1 )]
position = Vector2( 1777, 500 )
scale = Vector2( 0.7, 1 )
script = ExtResource( 3 )

[node name="Ball" parent="." instance=ExtResource( 5 )]
position = Vector2( 952, 422 )
collision_layer = 3

[node name="bounce" type="AudioStreamPlayer" parent="Ball"]
stream = ExtResource( 10 )

[node name="KickoffUI" type="CanvasLayer" parent="."]
script = ExtResource( 8 )

[node name="StartButton" type="Button" parent="KickoffUI"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -90.0
margin_top = 97.0
margin_right = -49.0
margin_bottom = 117.0
rect_scale = Vector2( 4, 3 )
action_mode = 0
text = "Start"

[node name="Music" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 12 )
autoplay = true

[node name="Message" parent="." instance=ExtResource( 13 )]
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 579.0
margin_top = 635.0
margin_right = 579.0
margin_bottom = 635.0
rect_pivot_offset = Vector2( 369, 154 )

[connection signal="body_entered" from="Enviornment/Player1Net" to="." method="_on_Player1Net_body_entered"]
[connection signal="body_entered" from="Enviornment/Player2Net" to="." method="_on_Player2Net_body_entered"]
[connection signal="pressed" from="KickoffUI/StartButton" to="." method="game_start"]
